--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ nav{
     align-items: center;
     background-color: rgb(7, 7, 7);
     padding: 1rem;
-    position: sticky ;
 
 }
  .nav-links ,#nav-links {
@@ -42,7 +41,6 @@ nav{
     color: black;
     font-weight: 500;
     border-radius: 10px;
-    position: relative;
 }
 
 .logo {
@@ -97,22 +95,27 @@ nav{
 /*IMAGE SLIDER STYLING...*/
 .home{
       width: 100%;
+      transition:all 0.5s ease-in 2s;
 
 }
 .image-slider{
     width: 100%;
     object-fit: cover;
     background-size: cover;
+    object-fit: cover;
+    background-position: center;
     display: flex;
+    justify-content: center;
     overflow: hidden;
-    transition:all 0.5s ease-in 2s;
+    position:relative ;
+    background-color: aquamarine;
 
 
 }
 .image-slider img{
     width: 100%;
+    height: 100%;
     transition:all 0.5s ease-in 2s;
-    position: relative;
    
 
 }
@@ -124,7 +127,7 @@ nav{
     align-items: center;
     justify-content: center;
     font-size: 2rem;
-    top: 15%;
+    top: 50%;
     width: 50px;
     border-radius: 5px;
     cursor: pointer;
@@ -147,9 +150,11 @@ nav{
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: 0;
-    bottom: -30%;
+    min-height: 20px;
+    bottom: 40%;
+    top: 0%;
     right: 50%;
+
 }
  .dots{
      width: 15px;
@@ -157,6 +162,7 @@ nav{
      border: 2px solid rgb(10, 10, 10);
      border-radius: 50%;
      margin: 0 2px; 
+     
 }
 .active{
     width: 30px;
@@ -165,7 +171,7 @@ nav{
     background-color: rgb(20, 20, 232);
 
 }
-@media screen and (max-width:800px) {
+@media screen and (max-width:1000px) {
     .container{
         position: relative;
     }
@@ -225,10 +231,44 @@ nav{
         top: 0;
         bottom: -90%;
     }
-    .arrow{
-        font-size: 1.3rem;
+    .image-slider{
+        position: relative;
+
     }
+    .arrow{
+        font-size: 1.5rem;
+        height: 0;
+        top: 65%;
+    }
+    .right-arrow{ right: -7px;}
+    .left-arrow{ left: -8px;}
     .arrow:hover{
         border: none;
     }
+    .dots{
+        width: 10px;
+        height: 10px;
+        border: 2px solid rgb(10, 10, 10);
+        border-radius: 50%;
+        margin: 0 2px; 
+   }
+   .active{
+       width: 20px;
+       height: 10px;
+       border-radius: 10px;
+       background-color: rgb(20, 20, 232);
+   
+   }
+   
 }
+
+@media screen and (min-width:1024px) {
+
+   .dot{
+    top: 80%;
+   }
+   .arrow{
+    top: 30%;
+   }
+    
+} 
